<resources>
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sing_up">Sing Up</string>
    <string name="signout">SignOut</string>
</resources>